--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="mega">
     
     <div class="logo">
-        <img src="../svg/mega-sena.svg" alt="Mega-Sena">
+        <img src="./svg/mega-sena.svg" alt="Mega-Sena">
 
     </div>
 <div class="concurso">
