--- a/index.html
+++ b/index.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Projetinho</title>
-</head>
-<body>
-    
-<div class="mega">
-    
-    <div class="logo">
-        <img src="./svg/mega-sena.svg" alt="Mega-Sena">
+  </head>
+  <body>
+    <div class="mega">
+      <div class="logo">
+        <img src="./svg/mega-sena.svg" alt="Mega-Sena" />
+      </div>
+      <div class="concurso">
+        <p><span>Concurso:</span> 2732</p>
+        <p><span>Data do sorteio:</span> 04/06/2024</p>
+      </div>
 
+      <div class="acumulou">
+        <h3>Acumulou</h3>
+      </div>
+
+      <p class="sorteados"><span>Números sorteados:</span></p>
+      <div class="numbers">
+        <p>60</p>
+        <p>60</p>
+        <p>60</p>
+        <p>60</p>
+        <p>60</p>
+        <p>60</p>
+      </div>
+
+      <p class="proximo"><span>Próximo sorteio:</span> 06/06/2024</p>
     </div>
-<div class="concurso">
-    <p><span>Concurso:</span> 2732</p>
-    <p><span>Data do sorteio:</span> 04/06/2024</p>
-</div>
-
-<div class="acumulou">
-    <h3>Acumulou</h3>
-</div>
-
-<p class="sorteados"><span>Números sorteados:</span></p>
-<div class="numbers">
-<p>60</p>
-<p>60</p>
-<p>60</p>
-<p>60</p>
-<p>60</p>
-<p>60</p>
-
-</div>
-
-
-
-<p class="proximo"><span>Próximo sorteio:</span> 06/06/2024</p>
-
-
-</div>
-
-
-
-</body>
+  </body>
 </html>
